deployments/k8s/django-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prodxcloud-django-web-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/success-codes: '200'
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.prodxcloud.io
    secretName: prodxcloud-django-web-tls
  rules:
  - host: api.prodxcloud.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prodxcloud-django-web-dev
            port:
              number: 8585
