deployments/k8s/django-virtualservice.yaml
# django-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: django-virtualservice
  namespace: default
spec:
  hosts:
  - "api.prodxcloud.io"
  gateways:
  - django-gateway
  http:
  - route:
    - destination:
        host: prodxcloud-django-web-dev
        port:
          number: 80
